--- a/templates/index.html
+++ b/templates/index.html
@@ -107,6 +107,19 @@
       </div>
       <!-- Metric 2 -->
 
+      <!-- Stacked bar -->  
+      <div class="col-sm-6">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Poverty
+          </div>
+          <div class="chart-stage">
+            <div id="resource-type-poverty-level-chart"></div>
+          </div>
+        </div>
+      </div>
+      <!-- Map -->
+
     </div>
 
   </div>
