--- a/templates/index.html
+++ b/templates/index.html
@@ -118,14 +118,24 @@
           </div>
         </div>
       </div>
-      <!-- Map -->
+
+      <!-- Stacked bar -->  
+      <div class="col-sm-6">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Grade Level
+          </div>
+          <div class="chart-stage">
+            <div id="grade-level-chart"></div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
 
   </div>
 
-    <hr>
-    <p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Keen IO</a></p>
 
   </div>
 
