--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
           <div class="col-sm-12">
             <div class="chart-wrapper">
               <div class="chart-title">
-                Number of Donations
+                Time Chart
               </div>
               <div class="chart-stage">
                 <div id="time-chart"></div>
@@ -72,7 +72,7 @@
       <div class="col-sm-6">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Distribution of Donations
+            Distribution of Donations - Across States
           </div>
           <div class="chart-stage">
             <div id="us-chart"></div>
@@ -111,7 +111,7 @@
       <div class="col-sm-6">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Poverty
+            Resources Type (Stacked by Poverty Level)
           </div>
           <div class="chart-stage">
             <div id="resource-type-poverty-level-chart"></div>
